# ot-harjoitustyo

./: .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: gitlog.txt
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage  .coveragerc
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: laajennettumonopoli.md  laitehallintosekvenssikaavio.md  machinesekvenssikaavio.md  monopoli.md
src/: character.py  character_repository.py  character_service.py  config.py  database_connection.py  index.py  initialize_database.py  login_view.py  register_view.py  sheet_view.py  user.py  user_repository.py  user_service.py
src/entities/: character.py  user.py
src/repositories/: character_repository.py  user_repository.py
src/services/: character_service.py  user_service.py
src/tests/: conftest.py  user_repository_test.py  user_service_test.py
src/tests/integration/: character_integration_test.py  user_integration_test.py
src/tests/repositories/: character_repository_test.py  user_repository_test.py
src/tests/services/: character_service_test.py  user_service_test.py
src/ui/: character_list_view.py  login_view.py  register_view.py  sheet_view.py  ui.py
