[tool.poetry]
name = "pathfinder2esheet"
version = "0.1.0"
description = ""
authors = ["regularmute <93884347+Regularmute@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
bcrypt = "^4.0.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
